# pipeline_qualite_eau

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
notebooks/: 01_ingest_data_in_lake.ipynb  02_Ingestion_in_bronze.ipynb  03_transfom_data_in_silver.ipynb
terraform/: databricks.tf  main.tf  providers.tf  variables.tf
